[tool.poetry]
name = "geotargeting"
version = "0.1.0"
description = ""
authors = ["Nandan Rao <nandanmarkrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
editdistance = "^0.8.1"
rasterstats = "^0.19.0"
rasterio = "^1.3.10"
geopandas = "^1.0.1"
pygeos = "^0.14"
clize = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
vlab_geotarget = 'geotargeting.geotargeting:run'
